<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_network_connection_title"
            android:textSize="16sp"
            android:textColor="@color/black_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/local_network_connection_description"
            android:textSize="14sp"
            android:textColor="@color/gray_1"/>

        <TextView
            android:id="@+id/local_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/gray_1"
            android:text="@string/local_network_local_address" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/local_addresses_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/local_address_item_layout"/>

        <FrameLayout
            android:id="@+id/scan_qr_code_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_line_button_color_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/local_network_scan_qr_code"
                android:textSize="18sp"
                android:textColor="@color/teal_200"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/show_qr_code_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_line_button_color_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/local_network_show_qr_code"
                android:textSize="18sp"
                android:textColor="@color/teal_200"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/search_server_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_line_button_color_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/broadcast_connection_as_receiver"
                android:textSize="18sp"
                android:textColor="@color/teal_200"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/as_server_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_line_button_color_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/broadcast_connection_as_sender"
                android:textSize="18sp"
                android:textColor="@color/teal_200"/>

        </FrameLayout>

    </LinearLayout>

</layout>