<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_dialog_bg"
        android:layout_marginStart="?attr/dialogPreferredPadding"
        android:layout_marginEnd="?attr/dialogPreferredPadding">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_dialog_title_top_margin"
            android:textSize="@dimen/md_dialog_title_text_size"
            android:textColor="@color/md_dialog_title_color"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            android:textStyle="bold"
            android:text="@string/settings_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/download_dir_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/md_dialog_title_color"
            android:textStyle="bold"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            android:layout_marginTop="18dp"
            android:text="@string/setting_download_dir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/download_dir_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/gray_1"
            android:layout_marginTop="6dp"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            tools:text="/a/b/c/d/c/a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_dir_title_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/share_dir_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/md_dialog_title_color"
            android:textStyle="bold"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            android:layout_marginTop="12dp"
            android:text="@string/setting_share_my_dir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_dir_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/share_my_dir_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            android:layout_marginTop="6dp"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share_dir_title_tv" />

        <TextView
            android:id="@+id/max_connection_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/md_dialog_title_color"
            android:textStyle="bold"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            android:layout_marginTop="12dp"
            android:text="@string/setting_max_connections_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share_my_dir_st"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/max_connection_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/max_connection_title_tv"
            app:layout_constraintEnd_toStartOf="@id/max_connection_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/max_connection_tv"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/gray_1"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            app:layout_constraintStart_toEndOf="@id/max_connection_sb"
            app:layout_constraintTop_toTopOf="@id/max_connection_sb"
            app:layout_constraintBottom_toBottomOf="@id/max_connection_sb"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>