<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="vertical">-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/wifi_p2p_connection_title"-->
<!--        android:textSize="16sp"-->
<!--        android:textColor="@color/black_1"/>-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:lineSpacingExtra="5dp"-->
<!--        android:text="@string/wifi_p2p_connection_tips"-->
<!--        android:textSize="14sp"-->
<!--        android:textColor="@color/gray_1"/>-->

<!--    <TextView-->
<!--        android:id="@+id/local_address_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="12sp"-->
<!--        android:textColor="@color/gray_1"-->
<!--        tools:text="@string/wifi_p2p_connection_local_address" />-->


<!--</LinearLayout>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/connected_actions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/remote_connected_device_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray_1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="@string/wifi_p2p_connection_remote_device" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:weightSum="2">

                    <FrameLayout
                        android:id="@+id/close_current_connection_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/common_line_button_color_bg">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/wifi_p2p_connection_close_current_connection"
                            android:textColor="?colorPrimary"
                            android:textSize="14sp" />

                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/transfer_file_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/accept_btn_bg">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/wifi_p2p_connection_transfer_files"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/remote_devices_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/remote_server_item_layout" />


            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/container_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:weightSum="4">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/search_anim"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/anim" />

                <TextView
                    android:id="@+id/txt_find_friend"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Search for nearest active friends"
                    android:textColor="@color/black_1"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Or use"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="?colorPrimary"
                android:drawableStart="@drawable/baseline_qr_code_24"
                android:drawablePadding="16dp"
                android:padding="24dp"
                android:text="QRCode Scan"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>